--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <button type="button" class="btn-close" aria-label="Close"></button>
             </div>
         </div>
+        Hello World
 
         <div class="logo-container">
             <img src="img/NEUST-outer.webp" class="gear" alt="Rotating Gear">
