--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                 <button type="button" class="btn-close" aria-label="Close"></button>
             </div>
         </div>
-        Hello World
+       
 
-        <div class="logo-container">
+        <!-- <div class="logo-container">
             <img src="img/NEUST-outer.webp" class="gear" alt="Rotating Gear">
             <img src="img/NEUST-inner.webp" class="inner-logo" alt="Static Inner Logo">
-        </div>
+        </div> -->
 
         <div id="chartContainer" style="height: 370px; width: 100%;"></div>
 
