--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         </div>
 
 
-        <!-- <div class="logo-container">
+        <div class="logo-container">
             <img src="img/NEUST-outer.webp" class="gear" alt="Rotating Gear">
             <img src="img/NEUST-inner.webp" class="inner-logo" alt="Static Inner Logo">
-        </div> -->
+        </div>
 
         <div id="chartContainer" style="height: 370px; width: 100%;"></div>
 
