--- a/frontPage.html
+++ b/frontPage.html
@@ -25,7 +25,7 @@
       <!-- </div> -->
       <p class="lead mt-3 fw-bold">Simplify, Collaborate, and Succeed</p>
       <p class="fs-4">
-        Managing team tasks doesn’t have to be complicated. Our simple offline tool is designed to help teams work
+        Managing team tasks doesn't have to be complicated. Our simple offline tool is designed to help teams work
         together,
         stay organized, and get things done!
       </p>
